fixed checkstyle warnings fixed findbugs warnings